k8s/apps/iwashi-cortex/ciliumnetworkpolicy-alertmanager-smtp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: iwashi-cortex-alertmanager-smtp
  namespace: iwashi-system
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: iwashi-smtp-relay
            k8s:app.kubernetes.io/name: mail
            k8s:io.kubernetes.pod.namespace: iwashi-system
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: alertmanager
      app.kubernetes.io/instance: iwashi-cortex
      app.kubernetes.io/name: cortex
