k8s/apps/iwashi-cortex/networkpolicy-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iwashi-cortex-alertmanager
  namespace: iwashi-system
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 587
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: iwashi-smtp-relay
              app.kubernetes.io/name: mail
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: iwashi
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: alertmanager
      app.kubernetes.io/instance: iwashi-cortex
      app.kubernetes.io/name: cortex
  policyTypes:
    - Ingress
    - Egress
