k8s/apps/iwashi-cortex/networkpolicy-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iwashi-cortex-internal
  namespace: iwashi-system
spec:
  egress:
    - ports:
        - port: 8080
          protocol: TCP
        - port: 9095
          protocol: TCP
        - port: 7946
          protocol: TCP
        - port: 9094
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: iwashi-cortex
              app.kubernetes.io/name: cortex
    - ports:
        - port: 11211
          protocol: TCP
      to:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - memcached-frontend
                  - memcached-blocks-index
                  - memcached-blocks
                  - memcached-blocks-metadata
            matchLabels:
              app.kubernetes.io/instance: iwashi-cortex
    - ports:
        - port: 10443
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/name: envoy
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: iwashi-cortex
              app.kubernetes.io/name: cortex
      ports:
        - port: 8080
          protocol: TCP
        - port: 9095
          protocol: TCP
        - port: 7946
          protocol: TCP
        - port: 9094
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: opentelemetry-collector.prometheus
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: iwashi-cortex
      app.kubernetes.io/name: cortex
  policyTypes:
    - Ingress
    - Egress
