k8s/apps/iwashi-cortex/networkpolicy-querier.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iwashi-cortex-querier
  namespace: iwashi-system
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: iwashi
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: querier
      app.kubernetes.io/instance: iwashi-cortex
      app.kubernetes.io/name: cortex
  policyTypes:
    - Ingress
